--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "1.0.0",
   "description": "Google Spreadsheet to JSON API app",
   "main": "app.js",
+  "type": "module",
   "author": "Nick Moreton",
   "dependencies": {
+    "@types/express": "^4.17.21",
     "body-parser": "^1.x.x",
+    "dotenv": "^16.3.1",
     "express": "^4.x.x",
-    "request": "^2.69.0"
+    "nodemon": "^3.0.1",
+    "request": "^2.69.0",
+    "swc": "^1.0.11"
   },
   "license": "ISC",
   "scripts": {
-    "start": "node app.js"
+    "build": "swc src --out-dir dist",
+    "start": "node dist/server.js",
+    "dev": "npm run build && nodemon dist/server.js"
   }
 }
