--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
         - name: gsx2json-container
           image: "IMAGE_NAME"
-          environment:
+          env:
             - name: PORT
               value: "80"
             - name: GOOGLE_AUTH_KEY
