--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -23,6 +23,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: gsx2json
+            name: gsx2json-service
             port:
               number: 80
